--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Registration Form</title>
-		<link rel="stylesheet" href="Style.css" />
+		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
 		<section>
@@ -61,6 +61,6 @@
 			</div>
 		</dialog>
 
-		<script src="Index.js"></script>
+		<script src="index.js"></script>
 	</body>
 </html>
