--- a/index.html
+++ b/index.html
@@ -61,6 +61,14 @@
 			</div>
 		</dialog>
 
+		<div class="form-group">
+	            <label for="password">Password</label>
+	            <input type="password" id="password" name="password" />
+	            <div class="char-count" id="password-counter">0 / 20</div>
+	            <span class="message"></span>
+                 </div>
+
+
 		<script src="index.js"></script>
 	</body>
 </html>
