--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
+		<button id="toggle-theme" class="theme-toggle">🌙 Dark Mode</button>
+
 		<section>
 			<div class="container">
 				<h1>homework</h1>
