--- a/index.html
+++ b/index.html
@@ -39,10 +39,12 @@
 					</div>
 
 					<div class="form-group">
-						<label for="password">Password</label>
-						<input type="password" id="password" name="password" />
-						<span class="message"></span>
-					</div>
+	                                <label for="password">Password</label>
+	                                <input type="password" id="password" name="password" maxlength="20" />
+	                                <div class="char-count" id="password-counter">0 / 20</div>
+	                                <span class="message"></span>
+                        </div>
+
 
 					<button type="submit">Submit</button>
 				</form>
@@ -62,13 +64,6 @@
 				<button class="close">Close</button>
 			</div>
 		</dialog>
-
-		<div class="form-group">
-	            <label for="password">Password</label>
-	            <input type="password" id="password" name="password" />
-	            <div class="char-count" id="password-counter">0 / 20</div>
-	            <span class="message"></span>
-                 </div>
 
 
 		<script src="index.js"></script>
